# ocr-score

./: .gitignore  README.md  pyproject.toml
docs/: current_standard_system_maturity_assessment.md  essay_scoring_framework_v1.md  family_rules_school_rules_v2_1_adjustments.md  family_rules_school_rules_v2_gate_rules.md  family_rules_school_rules_v2_optimization.md  family_rules_school_rules_v2_prompt.md  low_score_band_rules_v1.md  ocr_business_spec.md  ocr_scoring_pipeline_spec.md  standard_system_final_structure.md  test_log.md
examples/: case_001_high_score.md  case_002_low_score.md
schemas/: grading_request.schema.json  grading_result.schema.json  ocr_result.schema.json
src/essay_grading/: __init__.py  grading_models.py  grading_service.py  grading_validator.py  prompt_builder.py  rubric_loader.py
src/essay_grading/framework/: essay_scoring_framework_v1.json
src/essay_grading/rubrics/: family_rules_school_rules_v1.json  family_rules_school_rules_v2.json
src/essay_ocr/: __init__.py  batch_runner.py  paddleocr_client.py
tasks/: family_rules_school_rules_task_v1.json
